--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -96,6 +96,7 @@
     <Compile Include="SafetySystems\DefaultSafetySystems.cs" />
     <Compile Include="SafetySystems\PassAlarm.cs" />
     <Compile Include="SafetySystems\PilotLamp.cs" />
+    <Compile Include="SafetySystems\Plugin\Plugin.cs" />
     <Compile Include="SafetySystems\StationAdjustAlarm.cs" />
     <Compile Include="SafetySystems\TrainSafetySystems.cs" />
     <Compile Include="TrainManager.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Train\CommandEntry.cs" />
     <Compile Include="Train\Doors.cs" />
     <Compile Include="Train\DriverBody.cs" />
+    <Compile Include="Train\Handles.cs" />
     <Compile Include="Train\Horn.cs" />
     <Compile Include="Train\Passengers.cs" />
     <Compile Include="Train\TrainBase.cs" />
