--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -96,10 +96,19 @@
     <Compile Include="SafetySystems\DefaultSafetySystems.cs" />
     <Compile Include="SafetySystems\PassAlarm.cs" />
     <Compile Include="SafetySystems\PilotLamp.cs" />
+    <Compile Include="SafetySystems\Plugin\LegacyPlugin.cs" />
+    <Compile Include="SafetySystems\Plugin\NetPlugin.cs" />
     <Compile Include="SafetySystems\Plugin\Plugin.cs" />
+    <Compile Include="SafetySystems\Plugin\Plugin.Functions.cs" />
     <Compile Include="SafetySystems\StationAdjustAlarm.cs" />
     <Compile Include="SafetySystems\TrainSafetySystems.cs" />
+    <Compile Include="TrackFollowingObject\AI\TrackFollowingObject.AI.cs" />
+    <Compile Include="TrackFollowingObject\AI\TravelData.cs" />
+    <Compile Include="TrackFollowingObject\AI\TravelPointData.cs" />
+    <Compile Include="TrackFollowingObject\AI\TravelStopData.cs" />
+    <Compile Include="TrackFollowingObject\TrackFollowingObject.cs" />
     <Compile Include="TrainManager.cs" />
+    <Compile Include="TrainManager.Functions.cs" />
     <Compile Include="Train\BrakeSystem.cs" />
     <Compile Include="Train\CommandEntry.cs" />
     <Compile Include="Train\Doors.cs" />
@@ -107,6 +116,8 @@
     <Compile Include="Train\Handles.cs" />
     <Compile Include="Train\Horn.cs" />
     <Compile Include="Train\Passengers.cs" />
+    <Compile Include="Train\RequestStop.cs" />
+    <Compile Include="Train\Station.cs" />
     <Compile Include="Train\TrainBase.cs" />
     <Compile Include="Train\TrainSpecs.cs" />
   </ItemGroup>
