Move Panel2.cfg parser to train loading plugin

--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Panel\Panel2CfgParser.cs" />
     <Compile Include="Panel\PanelCfgParser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
