Shift PanelAnimatedXML parser to new plugin

--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Panel\Panel2CfgParser.cs" />
+    <Compile Include="Panel\PanelAnimatedXmlParser.cs" />
     <Compile Include="Panel\PanelCfgParser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
