Shift PanelXML parser to new plugin

--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Panel\Panel2CfgParser.cs" />
     <Compile Include="Panel\PanelAnimatedXmlParser.cs" />
     <Compile Include="Panel\PanelCfgParser.cs" />
+    <Compile Include="Panel\PanelXmlParser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
