--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Panel\PanelXmlParser.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sound\SoundCfg.Ats.cs" />
+    <Compile Include="Sound\SoundCfg.Base.cs" />
+    <Compile Include="Sound\SoundCfg.Bve2.cs" />
+    <Compile Include="Sound\SoundCfg.Bve4.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\LibRender2\LibRender2.csproj">
@@ -58,11 +62,17 @@
       <Project>{27134980-4415-4375-a564-40a9014dfa5f}</Project>
       <Name>OpenBveApi</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\SoundManager\SoundManager.csproj">
+      <Project>{90ABFA0C-ABCA-444E-ADEF-9A299AED6524}</Project>
+      <Name>SoundManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\TrainManager\TrainManager.csproj">
       <Project>{d0fca2c5-ff75-42d8-ae80-310280a61fb1}</Project>
       <Name>TrainManager</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Train\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
