--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -95,7 +95,12 @@
     <Compile Include="FunctionScripts\Instructions.cs" />
     <Compile Include="Graphics\Camera.RestrictionModes.cs" />
     <Compile Include="Graphics\Colors.cs" />
+    <Compile Include="Interface\Input\Control.cs" />
+    <Compile Include="Interface\Input\ControlMethod.cs" />
+    <Compile Include="Interface\Input\DigitalControlState.cs" />
     <Compile Include="Interface\Input\InputDevice.cs" />
+    <Compile Include="Interface\Input\JoystickComponent.cs" />
+    <Compile Include="Interface\Input\KeyboardModifier.cs" />
     <Compile Include="Interface\Key.cs" />
     <Compile Include="Interface\Logging\LogMessage.cs" />
     <Compile Include="Interface\Logging\LogMessage.MessageType.cs" />
