--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Screen\Screen.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Textures\TextureManager.cs" />
+    <Compile Include="Text\Fonts.cs" />
     <Compile Include="Text\OpenGlFont.cs" />
     <Compile Include="Text\OpenGlFontChar.cs" />
     <Compile Include="Text\OpenGlFontTable.cs" />
