Change: More twiddling in panel parsers

--- a/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
+++ b/source/Plugins/Train.OpenBve/Train.OpenBve.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Panel\Common\Panel.cs" />
     <Compile Include="Panel\Panel2Cfg\Panel2CfgParser.cs" />
     <Compile Include="Panel\Panel2Cfg\Panel2CfgParser.Keys.cs" />
     <Compile Include="Panel\Panel2Cfg\Panel2CfgParser.Sections.cs" />
