Change: Minor cleanup in proxy plugin class

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -96,6 +96,7 @@
     <Compile Include="SafetySystems\Plugin\NetPlugin.cs" />
     <Compile Include="SafetySystems\Plugin\Plugin.cs" />
     <Compile Include="SafetySystems\Plugin\Plugin.Functions.cs" />
+    <Compile Include="SafetySystems\Plugin\Plugin.SoundInstructions.cs" />
     <Compile Include="SafetySystems\Plugin\ProxyPlugin.cs" />
     <Compile Include="SafetySystems\StationAdjustAlarm.cs" />
     <Compile Include="SafetySystems\TrainSafetySystems.cs" />
