Change: Only log invalid constant speed value recieved via proxy once
ATS.dll otherwise spams...

--- a/source/Plugins/Win32PluginProxy/Win32PluginProxy.csproj
+++ b/source/Plugins/Win32PluginProxy/Win32PluginProxy.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Win32PluginProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
