Fix: the issue where daily build would work triggered by PR

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,8 @@
 trigger:
 - master
 
+pr: none
+
 ### Test on latest Windows and .Net version
 
 jobs:
@@ -49,7 +51,7 @@ jobs:
   - script: sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_8_0
   - script: make publish 
   - task: CopyFilesOverSSH@0
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded())
     inputs:
      sshEndpoint: 'BuildServer'
      sourceFolder: $(Pipeline.Workspace)/s/
@@ -75,7 +77,7 @@ jobs:
   - task: NuGetToolInstaller@1
   - script: make publish 
   - task: CopyFilesOverSSH@0
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded())
     inputs:
      sshEndpoint: 'BuildServer'
      sourceFolder: $(Pipeline.Workspace)/s/
