Change: Implement our own GIF decoder, as the Mono one is no good

--- a/source/Plugins/Texture.BmpGifJpegPngTiff/Texture.BmpGifJpegPngTiff.csproj
+++ b/source/Plugins/Texture.BmpGifJpegPngTiff/Texture.BmpGifJpegPngTiff.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GifDecoder.cs" />
+    <Compile Include="GifDecoder.Status.cs" />
     <Compile Include="Plugin.Parser.cs">
       <DependentUpon>Plugin.cs</DependentUpon>
     </Compile>
