--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -205,6 +205,7 @@
     <Compile Include="System\SimulationState.cs" />
     <Compile Include="System\TextEncoding.cs" />
     <Compile Include="System\Timers.cs" />
+    <Compile Include="Textures\Textures.ByteArrayOrigin.cs" />
     <Compile Include="Textures\Textures.ImageSizeMode.cs" />
     <Compile Include="Train\AbstractCar.cs" />
     <Compile Include="Train\AbstractTrain.cs" />
