--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -102,6 +102,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timers.cs" />
     <Compile Include="TrainManagerS.cs" />
+    <Compile Include="Trains\NearestTrain.cs" />
+    <Compile Include="Trains\NearestTrainSpecs.cs" />
+    <Compile Include="Trains\NearestTrainStatus.cs" />
+    <Compile Include="Trains\PluginState.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="formMessages.resx">
