--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -93,6 +93,7 @@
     <Compile Include="SafetySystems\PassAlarm.cs" />
     <Compile Include="SafetySystems\PilotLamp.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.cs" />
+    <Compile Include="SafetySystems\Plugin\AI\PluginAI.HeiAts.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKDt.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKMUt.cs" />
     <Compile Include="SafetySystems\Plugin\AI\PluginAI.UKSpt.cs" />
