Change: Add configure link to joystick box

--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -212,6 +212,7 @@
     <Compile Include="System\Input\Controls.Control.cs" />
     <Compile Include="System\Input\Controls.cs" />
     <Compile Include="System\Input\InputDevicePlugin.cs" />
+    <Compile Include="System\Input\JoystickManager\ConfigurationLink.cs" />
     <Compile Include="System\Input\JoystickManager\JoystickManager32.cs" />
     <Compile Include="System\Input\JoystickManager\JoystickManager64.cs" />
     <Compile Include="System\Input\JoystickManager\RailDriver\AbstractRailDriver.cs" />
