--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen\InterfaceType.cs" />
     <Compile Include="Screen\OutputModes.cs" />
+    <Compile Include="Screen\Resolution.cs" />
     <Compile Include="Screen\Screen.cs" />
     <Compile Include="Shaders\Shader.cs" />
     <Compile Include="Textures\TextureManager.cs" />
